--- a/culinaria.html
+++ b/culinaria.html
@@ -126,7 +126,7 @@
   <div class="container">
     <div class="chef-info">
       <div class="chef-image-container">
-        <img src="images/chefe.jpg" alt="[Nome do Chefe/Loja]">
+        <img src="chefe.jpg" alt="[Nome do Chefe/Loja]">
       </div>
       <h2>Chefe Clayton</h2>
       <p>Com paixão e respeito pela rica tradição de Minas Gerais, cada receita que preparo é uma celebração dos sabores autênticos desta terra. Da simplicidade acolhedora do pão de queijo ao reconfortante abraço do feijão tropeiro, cada prato conta uma história de gerações, de famílias reunidas ao redor do fogão a lenha, compartilhando não apenas comida, mas também afeto e tradição. Minha cozinha é um portal para a alma mineira, onde cada aroma e cada paladar evocam a hospitalidade, a fartura e o amor pela nossa terra.</p>
@@ -134,10 +134,10 @@
 
     <div class="carousel-container">
       <div class="carousel">
-        <img src="images/pao.jpg" alt="Pão de Queijo">
-        <img src="images/frango.png" alt="Frango com Quiabo">
-        <img src="images/doce.jpg" alt="Doce de Leite">
-        <img src="images/sarapatel.jpeg" alt="Outra Receita">
+        <img src="pao.jpg" alt="Pão de Queijo">
+        <img src="frango.png" alt="Frango com Quiabo">
+        <img src="doce.jpg" alt="Doce de Leite">
+        <img src="sarapatel.jpeg" alt="Outra Receita">
       </div>
     </div>
 
@@ -177,14 +177,14 @@
       <h3>Receitas Mais Pedidas</h3>
       <div class="receitas">
         <div class="receita">
-          <img src="images/pao.jpg" alt="Pão de Queijo">
+          <img src="pao.jpg" alt="Pão de Queijo">
           <div>
             <h4>Pão de Queijo</h4>
             <p>O clássico mineiro, crocante por fora e macio por dentro, feito com queijo da canastra.</p>
           </div>
         </div>
         <div class="receita">
-          <img src="images/frango.png" alt="Frango com Quiabo">
+          <img src="frango.png" alt="Frango com Quiabo">
           <div>
             <h4>Frango com Quiabo</h4>
             <p>Receita tradicional com frango caipira e quiabo fresco, um prato cheio de sabor e afeto.</p>
@@ -197,7 +197,7 @@
   <footer>
     <div>
       <a href="tel: +55 38 9815-9035">[SEU TELEFONE]</a>
-      <a href="mailto: mirasfood@gmail.com">[SEU EMAIL]</a>
+      <a href="mailto: mirasfood@gmail.com">mirasfood@gmail.com</a>
     </div>
     <div>
       <a href="[FACEBOOK]">Facebook</a>
